--- a/index.html
+++ b/index.html
@@ -7,88 +7,138 @@
   <title>Hackathon Movies</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/animate.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
 </head>
 <body>
 
-<div class="container-fluid">
+
   <!--inicio del navbar-->
-  <header class="bar">
-    <nav class="navbar navbar-reverse bar col-xs-12 col-sm-12 col-md-12 col-lg-12">
+   <nav class="navbar navbar-default navbar-inverse bar" role="navigation">
+    <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">MovieTalk</a>
+        <img class="mt-logo" src="assets/img/logo.png" href="index.html"><a class="navbar-brand mt-title" href="#">Movie Talk</a>
       </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">        
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
         <ul class="nav navbar-nav navbar-right">
-          <li><input class="find" type="text" placeholder="Buscar"></li>
-          <li><a class="register" href="#" data-toggle="modal" data-target="#sign-in">Registrate</a></li>
-          <li><a class="log-in" href="#">Inicia Sesión</a></li>
+          <li><p class="navbar-text">Already have an account?</p></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#" data-toggle="modal" data-target="#sign-in">Mi Perfil</a></li>
-              <li><a href="#">Info1</a></li>
-              <li><a href="#">Info2</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Cerrar Sesión</a></li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+            <ul id="login-dp" class="dropdown-menu">
+          <li>
+             <div class="row">
+                <div class="col-md-12">
+                  Login via
+                  <div class="social-buttons">
+                    <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
+                    <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
+                  </div>
+                                  or
+                   <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                      <div class="form-group">
+                         <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                         <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+                      </div>
+                      <div class="form-group">
+                         <label class="sr-only" for="exampleInputPassword2">Password</label>
+                         <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                                               <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                      </div>
+                      <div class="form-group">
+                         <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                      </div>
+                      <div class="checkbox">
+                         <label>
+                         <input type="checkbox"> keep me logged-in
+                         </label>
+                      </div>
+                   </form>
+                </div>
+                <div class="bottom text-center">
+                  New here ? <a href="#"><b>Join Us</b></a>
+                </div>
+             </div>
+          </li>
             </ul>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
-    </nav>
-  </header>
+    </div><!-- /.container-fluid -->
+  </nav>
   <!--final del navbar-->
 
   <!--Carrusel (INICIO)-->
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-          <div class="item active">
-            <img class="img-responsive" src="assets/img/batman.jpg" alt="Gótica-city">
+  <section class="dynamo">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+          </ol>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img class="img-responsive" src="assets/img/batman.jpg" alt="Gótica-city">
+            </div>
+
+            <div class="item">
+              <img class="img-responsive" src="assets/img/ss.png" alt="Squad">
+            </div>
+
+            <div class="item">
+              <img class="img-responsive" src="assets/img/dark.jpg" alt="Dark-Tower">
+            </div>
+
+            <div class="item">
+              <img class="img-responsive" src="assets/img/deadpool.jpg" alt="Dead">
+            </div>
           </div>
 
-          <div class="item">
-            <img class="img-responsive" src="assets/img/ss.png" alt="Squad">
-          </div>
-
-          <div class="item">
-            <img class="img-responsive" src="assets/img/dark.jpg" alt="Dark-Tower">
-          </div>
-
-          <div class="item">
-            <img class="img-responsive" src="assets/img/deadpool.jpg" alt="Dead">
-          </div>
+            <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-
-          <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
+      </div>
+    </div>
+  </section>
+  <!--Carrusel (CIERRE)-->
+  <!--saludo de bienvenida (INICIO)-->
+  <div class="row">
+    <div class="col-12 init">
+      <div class="welcome">
+        <div class="salute">
+          <h1 class="animated zoomIn">Bienvenid@s a Movie Talk</h1>
+          <p class="animated slideInUp">Encontrarás todo sobre de los ultimos estrenos de las carteleras de cine en Chile, ¡adelante! explora la página</p>
+        </div>
       </div>
     </div>
   </div>
-  <!--Carrusel (CIERRE)-->
+  <!--saludo de bienvenida (CIERRE)-->
 
   <!--Ultimos Post (inicio)-->
     <ul class="nav nav-pills last-post" role="tablist">
@@ -112,9 +162,7 @@
       
 
   </section>
-
   <!--En carteleras de cine (cierre)-->
-</div>
 
 
 
