--- a/reviews.html
+++ b/reviews.html
@@ -45,145 +45,10 @@
                 </div>
             </div>
             <div class="col-md-2 col-xs-12">
-                <button type="button" class="btn btn-warning">Trailer</button>
+                <button type="button" class="btn btn-warning trailer">Trailer</button>
                 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalReview">Escribir reviews</button>
             </div>
         </div>
-        <div class="row page-header">
-            <div class="col-md-12">
-                <div class="thumbnail">
-                    <h2>Opinión de la Película</h2>
-                </div>
-                <ul class="list-group">
-                    <li class="list-group-item borderReviews">
-                        <table>
-                            <tr>
-                                <td rowspan="2" class="tdImgReviews">
-                                    <img src="https://www.uv.mx/escolar/posgrado-2013/credencial/imgs/uno.jpg" alt="" class="imgPerfilReiews">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <label for="name">Nombre</label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </td>
-                                <td>
-                                    <label for="date">10/01/2018</label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="2">
-                                    <div class="thumbnail">
-                                        Comments
-                                    </div>
-                                    <td>
-                            </tr>
-                        </table>
-                    </li>
-                    <li class="list-group-item borderReviews">
-                        <table>
-                            <tr>
-                                <td rowspan="2" class="tdImgReviews">
-                                    <img src="https://www.uv.mx/escolar/posgrado-2013/credencial/imgs/uno.jpg" alt="" class="imgPerfilReiews">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <label for="name">Nombre</label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </td>
-                                <td>
-                                    <label for="date">10/01/2018</label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="2">
-                                    <div class="thumbnail">
-                                        Comments
-                                    </div>
-                                    <td>
-                            </tr>
-                        </table>
-                    </li>
-                    <li class="list-group-item borderReviews">
-                        <table>
-                            <tr>
-                                <td rowspan="2" class="tdImgReviews">
-                                    <img src="https://www.uv.mx/escolar/posgrado-2013/credencial/imgs/uno.jpg" alt="" class="imgPerfilReiews">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <label for="name">Nombre</label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </td>
-                                <td>
-                                    <label for="date">10/01/2018</label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="2">
-                                    <div class="thumbnail">
-                                        Comments
-                                    </div>
-                                    <td>
-                            </tr>
-                        </table>
-                    </li>
-                    <li class="list-group-item borderReviews">
-                        <table>
-                            <tr>
-                                <td rowspan="2" class="tdImgReviews">
-                                    <img src="https://www.uv.mx/escolar/posgrado-2013/credencial/imgs/uno.jpg" alt="" class="imgPerfilReiews">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <label for="name">Nombre</label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </td>
-                                <td>
-                                    <label for="date">10/01/2018</label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="2">
-                                    <div class="thumbnail">
-                                        Comments
-                                    </div>
-                                    <td>
-                            </tr>
-                        </table>
-                        </table>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
         <!-- Modal de Reviews -->
         <div id="modalReview" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -207,7 +72,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
