--- a/init.html
+++ b/init.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/main.css">
-  </head>
-  <body>
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body>
     <!-- carrusel de imagenes -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
+        <!-- Indicators -->
         <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-        <div class="item active">
-          <img class="img-responsive" src="assets/img/batman.jpg" alt="Gótica-city" />
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img class="img-responsive" src="assets/img/batman.jpg" alt="Gótica-city" />
+            </div>
+            <div class="item">
+                <img class="img-responsive" src="assets/img/ss.png" alt="Squad" />
+            </div>
+            <div class="item">
+                <img class="img-responsive" src="assets/img/dark.jpg" alt="Dark-Tower" />
+            </div>
+            <div class="item">
+                <img class="img-responsive" src="assets/img/deadpool.jpg" alt="Dead" />
+            </div>
         </div>
-        <div class="item">
-          <img class="img-responsive" src="assets/img/ss.png" alt="Squad" />
-        </div>
-        <div class="item">
-          <img class="img-responsive" src="assets/img/dark.jpg" alt="Dark-Tower" />
-        </div>
-        <div class="item">
-          <img class="img-responsive" src="assets/img/deadpool.jpg" alt="Dead" />
-        </div>
-      </div>
-      <!-- Controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
     <!-- fin del carrusel -->
     <!-- Saludo de bienvenida -->
     <div class="welcome">
-      <div class="salute">
-        <h1 class="animated zoomIn">Bienvenid@s a Movie Talk</h1>
-        <p class="animated slideInUp">Encontrarás todo sobre de los ultimos estrenos de las carteleras de cine en Chile, ¡adelante! explora la página</p>
-      </div>
+        <div class="salute">
+            <h1 class="animated zoomIn">Bienvenid@s a Movie Talk</h1>
+            <p class="animated slideInUp">Encontrarás todo sobre de los ultimos estrenos de las carteleras de cine en Chile, ¡adelante! explora la página</p>
+        </div>
     </div>
     <!--saludo de bienvenida (CIERRE)-->
     <!-- Seccion ultimos posts -->
     <section class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="col-md-2">
-            <h3>Últimos Posts:</h3>
-          </div>
-          <div class="col-md-2">
-            <img class="user img-responsive" src="assets/img/user.png" /><a href="#">Angi72 <span class="badge">42</span></a>
-          </div>
-          <div class="col-md-2">
-            <img class="user img-responsive" src="assets/img/user.png" /><a href="#">ConsoRock <span class="badge">3</span></a>
-          </div>
-          <div class="col-md-2">
-            <img class="user img-responsive rol" src="assets/img/user.png" /><a href="#">LigiaCautela <span class="badge">3</span></a>
-          </div>
-          <div class="col-md-2">
-            <img class="user img-responsive rol" src="assets/img/user.png" /><a href="#">Jess91 <span class="badge">23</span></a>
-          </div>
-          <div class="col-md-2">
-            <img class="user img-responsive rol" src="assets/img/user.png" /><a href="#">Rodrirene <span class="badge">7</span></a>
-          </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-2">
+                    <h3>Últimos Posts:</h3>
+                </div>
+                <div class="col-md-2">
+                    <img class="user img-responsive" src="assets/img/user.png" /><a href="#">Angi72 <span class="badge">42</span></a>
+                </div>
+                <div class="col-md-2">
+                    <img class="user img-responsive" src="assets/img/user.png" /><a href="#">ConsoRock <span class="badge">3</span></a>
+                </div>
+                <div class="col-md-2">
+                    <img class="user img-responsive rol" src="assets/img/user.png" /><a href="#">LigiaCautela <span class="badge">3</span></a>
+                </div>
+                <div class="col-md-2">
+                    <img class="user img-responsive rol" src="assets/img/user.png" /><a href="#">Jess91 <span class="badge">23</span></a>
+                </div>
+                <div class="col-md-2">
+                    <img class="user img-responsive rol" src="assets/img/user.png" /><a href="#">Rodrirene <span class="badge">7</span></a>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
-  </body>
+</body>
+
 </html>
