--- a/profile.html
+++ b/profile.html
@@ -13,17 +13,13 @@
         <div id="profileInfo" class="container">
             <center>
                 <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRbezqZpEuwGSvitKy3wrwnth5kysKdRqBW54cAszm_wiutku3R" name="aboutme" width="140" height="140" border="0" class="img-circle" />
-                <h3>Joe Sixpack <small>USA</small></h3>
-                <!-- <span><strong>Preferencias: </strong></span>
-                <span class="label label-warning">Drama</span>
-                <span class="label label-info">Comedia</span>
-                <span class="label label-info">Terror</span> -->
+                <h3 id="profileName"> </h3>
             </center>
             <hr>
         </div>
         <!-- /.profile info -->
         <!-- reviews -->
-        <div id="reviews">
+        <div id="reviewsUser">
             <h2>Últimos Reviews</h2>
             <div class="col-md-4">
                 <div class="container">
