--- a/index.html
+++ b/index.html
@@ -1,42 +1,213 @@
 <!-- Comenten su codigo, pongan su nombre en cada seccion que hagan, para ayudarnos en el orden -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>Movie Talks</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/animate.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css" />
 </head>
 
 <body>
     <!--inicio del navbar-->
-  <nav class="nav-bar container-fluid">
-    <div class="row">
-      <div class="hidden-xs hidden-sm col-md-3">
-        <a class="title-page" href="index.html">Movie Talks <img class="logo" src="assets/img/logo.png" alt=""></a>
-      </div>
-      <div class="col-xs-5 col-md-5">
-        <input id="inputSearchIndex" type="text" placeholder="Search">
-        <a href="#" id="searchIndex" class="btn-warning search">Buscar</a>
-      </div>
-      <div class="col-xs-5 col-md-4 text-right">
-        <a href="#" class="btn login">Login</a>
-        <a href="#" class="btn register">Registrate</a>
-      </div>
-  </nav>
+    <nav class="nav-bar container-fluid">
+        <div class="row">
+            <div class="hidden-xs hidden-sm col-md-3">
+                <a class="title-page" href="#">Movie Talks <img class="logo" src="assets/img/logo.png" alt=""></a>
+            </div>
+            <div class="col-xs-5 col-md-5">
+                <input id="inputSearchIndex" type="text" placeholder="Search" />
+                <a href="#" id="searchIndex" class="btn-warning search">Buscar</a>
+            </div>
+            <div class="col-xs-5 col-md-4 text-right">
+                <a href="#" id="login-form-link" class="btn login" data-toggle="modal" data-target="#modalLogin">Login</a>
+                <a href="#" id="register-form-link" class="btn register" data-toggle="modal" data-target="#modalLogin">Registrate</a>
+                <a href="#" id="logout-form-link" class="btn login hide">LogOut</a>
+            </div>
+    </nav>
 
     <!--final del navbar-->
     <!-- Div donde se inyectara el contenido de la pagina -->
     <div id="bodyIndex">
-      
+
     </div>
+    <!-- FIN Div donde se inyectara el contenido de la pagina -->
+
+    <div id="modalLogin" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content" id="modalLoginRegister">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title" id="sesionIni">Movie Talks <img class="logo" alt="Brand" src="assets/img/logo.png"></h4>
+                </div>
+                <div class="modal-body">
+                    <form id="formModal">
+                        <section id="formLogin" class="">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-5 col-xs-12">
+                                        <div class="panel panel-login">
+                                            <div class="panel-body">
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                        <form id="login-register-form" action="" method="" role="form" style="display: none;">
+                                                            <div class="form-group row">
+                                                                <label class="col-md-4 control-label" for="emailRegister">Correo Electrónico</label>
+                                                                <div class="col-md-8">
+                                                                    <div class="input-group">
+                                                                        <div class="input-group-addon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                                                                        <input type="email" name="emailRegister" id="emailRegister" tabindex="1" class="form-control" placeholder="Email Address" required/>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="form-group row">
+                                                                <label class="col-md-4 control-label" for="passwordRegister">Contraseña</label>
+                                                                <div class="col-md-8">
+                                                                    <div class="input-group">
+                                                                        <div class="input-group-addon"><i class="fa fa-unlock-alt" aria-hidden="true"></i></div>
+                                                                        <input type="password" name="passwordRegister" id="passwordRegister" tabindex="2" class="form-control" placeholder="Password" required/>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="form-group row hide reg">
+                                                                <label class="col-md-4 control-label" for="usernameRegister">Nombre</label>
+                                                                <div class="col-md-8">
+                                                                    <div class="input-group">
+                                                                        <div class="input-group-addon"><i class="fa fa-user"></i></div>
+                                                                        <input id="usernameRegister" name="usernameRegister" type="text" placeholder="Nombre" class="form-control input-md" required/>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+
+                                                            <div class="form-group row hide reg">
+                                                                <label class="col-md-4 control-label col-xs-12" for="countryRegister">País</label>
+                                                                <div class="col-md-8">
+                                                                    <input id="countryRegister" name="countryRegister" type="text" placeholder="País" class="form-control input-md" required/>
+                                                                </div>
+                                                            </div>
+                                                            <div class="form-group row hide reg">
+                                                                <label class="col-md-4 control-label" for="Upload photo">Subir foto</label>
+                                                                <div class="col-md-4"><input id="uploadPhoto" name="Upload photo" class="input-file" type="file" /></div>
+                                                            </div>
+                                                            <div class="form-group row hide reg">
+                                                                <div class="row">
+                                                                    <div class="col-sm-6 col-sm-offset-3">
+                                                                        <button data-dismiss="modal" type="submit" name="register-submit" id="btnRegistrarse" tabindex="4" class="form-control btn btn-register login">Regístrate ahora</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="form-group row hideLog">
+                                                                <div class="row">
+                                                                    <div class="col-sm-6 col-sm-offset-3">
+                                                                        <button data-dismiss="modal" type="button" name="register-submit" id="btnSesion" tabindex="4" class="form-control btn btn-register login">Iniciar Sesión</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--  <section id="formLogin" class="">
+        <div class="row logoLogin">
+            <div class="col-md-5 col-md-offset-4">
+                <img class="logo_bike" alt="Brand" src="assets/img/logo3.png">
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 col-xs-12">
+                    <div class="panel panel-login">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <form id="login-register-form" action="" method="" role="form" style="display: none;">
+                                        <div class="form-group row">
+                                            <label class="col-md-4 control-label" for="emailRegister">Correo Electrónico</label>
+                                            <div class="col-md-8">
+                                                <div class="input-group">
+                                                    <div class="input-group-addon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                                                    <input type="email" name="emailRegister" id="emailRegister" tabindex="1" class="form-control" placeholder="Email Address" value="" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-md-4 control-label" for="passwordRegister">Contraseña</label>
+                                            <div class="col-md-8">
+                                                <div class="input-group">
+                                                    <div class="input-group-addon"><i class="fa fa-unlock-alt" aria-hidden="true"></i></div>
+                                                    <input type="password" name="passwordRegister" id="passwordRegister" tabindex="2" class="form-control" placeholder="Password">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row hide reg">
+                                            <label class="col-md-4 control-label" for="usernameRegister">Nombre</label>
+                                            <div class="col-md-8">
+                                                <div class="input-group">
+                                                    <div class="input-group-addon"><i class="fa fa-user"></i></div>
+                                                    <input id="usernameRegister" name="usernameRegister" type="text" placeholder="Nombre" class="form-control input-md" />
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group row hide reg">
+                                            <label class="col-md-4 control-label col-xs-12" for="countryRegister">País</label>
+                                            <div class="col-md-8">
+                                                <input id="countryRegister" name="countryRegister" type="text" placeholder="País" class="form-control input-md" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group row hide reg">
+                                            <label class="col-md-4 control-label" for="Upload photo">Subir foto</label>
+                                            <div class="col-md-4"><input id="uploadPhoto" name="Upload photo" class="input-file" type="file" /></div>
+                                        </div>
+                                        <div class="form-group row hide reg">
+                                            <div class="row">
+                                                <div class="col-sm-6 col-sm-offset-3">
+                                                    <button data-toggle="modal" data-target="#squarespaceModal" type="button" name="register-submit" id="btnRegistrarse" tabindex="4" class="form-control btn btn-register">Regístrate ahora</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row hideLog">
+                                            <div class="row">
+                                                <div class="col-sm-6 col-sm-offset-3">
+                                                    <button data-toggle="modal" data-target="#squarespaceModal" type="button" name="register-submit" id="btnSesion" tabindex="4" class="form-control btn btn-register">Iniciar Sesión</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="assets/js/app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
+
 </body>
 
 </html>
