--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="nav-bar container-fluid">
         <div class="row">
             <div class="hidden-xs hidden-sm col-md-3">
-                <a class="title-page" href="#">Movie Talk <img class="logo" src="assets/img/logo.png" alt=""></a>
+                <a class="title-page mt-logo" href="#">Movie Talk <img class="logo" src="assets/img/logo.png" alt=""></a>
             </div>
             <div class="col-xs-5 col-md-5">
                 <input id="inputSearchIndex" type="text" placeholder="Search" />
